--- a/onboard.html
+++ b/onboard.html
@@ -17,43 +17,44 @@
 
   <div class="container">
     <div class="branding-section">
-      <h2 style="color:#2b623f">Bedruckte &  personalisierte Artikel</h2>
+      <h2 style="color:#2b623f">Geschirr an Bord & Verbrauch</h2>
       <p>  Unser Bordgeschirr und unsere Verbrauchsartikel sind so konzipiert, dass sie Eleganz, Zweck
 mässigkeit und Nachhaltigkeit vereinen und jeden Bordservice reibungslos und unvergesslich 
-machen.
+machen. <br>
 <br>
   Wir bieten eine breite Palette an umweltfreundlichen und anpassbaren Lösungen an, die mit 
 der Markenidentität und den ökologischen Werten Ihrer Fluggesellschaft übereinstimmen.</p>
 
       <div class="branding-item">
         <div class="text">
-          <h3>19. Bordkarten</h3>
+          <h3>14. 100% biologisch abbaubare Bestecksets</h3>
           <strong>Technische Details</strong>
           <ul>
             <li>Kundenspezifische Abmessungen verfügbar</li>
             <li>Kundenspezifisches Branding verfügbar</li>
-            <li>Lieferzeit: 2-4 Wochen</li>
+            <li>Lieferzeit: 3-4 Wochen</li>
           </ul>
         </div>
-        <img src="img/boardingpass - Copy.png" alt="Kopfstützenbezüge">
+        <img src="img/luga-removebg-preview - Copy.png" alt="Kopfstützenbezüge">
       </div>
 
       <div class="branding-item">
         <div class="text">
-          <h3>20.  UM-Taschen/Brieftaschen (für unbegleitete Minderjährige)</h3>
+          <h3>15. Pappbecher</h3>
           <strong>Technische Details</strong>
           <ul>
             <li>Kundenspezifisches Material verfügbar</li>
             <li>Kundenspezifisches Branding verfügbar</li>
+            <li>Grösse von 3oz - 12oz</li>
             <li>Lieferzeit: 2-4 Wochen</li>
           </ul>
         </div>
-        <img src="img/bag - Copy.png" alt="Tablett-Tisch-Aufkleber">
+        <img src="img/gota-removebg-preview - Copy.png" alt="Tablett-Tisch-Aufkleber">
       </div>
 
       <div class="branding-item">
         <div class="text">
-          <h3>21.  Priority-Tags</h3>
+          <h3>16.  Wein- und Cocktailgläser</h3>
           <strong>Technische Details</strong>
           <ul>
             <li>Kundenspezifische Abmessungen  verfügbar</li>
@@ -61,12 +62,12 @@ der Markenidentität und den ökologischen Werten Ihrer Fluggesellschaft überei
             <li>Lieferzeit: 2-4 Wochen</li>
           </ul>
         </div>
-        <img src="img/bussines - Copy.png" alt="Overhead Aufkleber">
+        <img src="img/glass-removebg-preview - Copy.png" alt="Overhead Aufkleber">
       </div>
 
       <div class="branding-item">
         <div class="text">
-          <h3>22. Gepäckanhänger</h3>
+          <h3>17. Feuchttücher und Servietten</h3>
           <strong>Technische Details</strong>
           <ul>
             <li>Kundenspezifische Abmessungen verfügbar</li>
@@ -74,55 +75,18 @@ der Markenidentität und den ökologischen Werten Ihrer Fluggesellschaft überei
             <li>Lieferzeit: 2-4 Wochen</li>
           </ul>
         </div>
-        <img src="img/bagazhi.png" alt="Dekorative Markierungen">
+        <img src="img/palloma-removebg-preview - Copy.png" alt="Dekorative Markierungen">
       </div>
       <div class="branding-item">
         <div class="text">
-          <h3>23.   Kundendienstkarten & Visitenkarten</h3>
+          <h3>18.  Miniatur-Spirituosen, Zucker, Salz, Pfeffer</h3>
           <strong>Technische Details</strong>
           <ul>
-            <li>Kundenspezifische Abmessungen verfügbar</li>
             <li>Kundenspezifisches Branding verfügbar</li>
-            <li>Lieferzeit: 2-4 Wochen</li>
+            <li>Lieferzeit: 3-4 Wochen</li>
           </ul>
         </div>
-        <img src="img/libra - Copy.png" alt="Dekorative Markierungen">
-      </div>
-      <div class="branding-item">
-        <div class="text">
-          <h3>24.  Broschüren  und Flyer</h3>
-          <strong>Technische Details</strong>
-          <ul>
-            <li>Kundenspezifische Abmessungen verfügbar</li>
-            <li>Kundenspezifisches Branding verfügbar</li>
-            <li>Lieferzeit: 2-4 Wochen</li>
-          </ul>
-        </div>
-        <img src="img/book - Copy.png" alt="Dekorative Markierungen">
-      </div>
-      <div class="branding-item">
-        <div class="text">
-          <h3>25.   Papier-Einkaufstasche</h3>
-          <strong>Technische Details</strong>
-          <ul>
-            <li>Kundenspezifische Abmessungen verfügbar</li>
-            <li>Kundenspezifisches Branding verfügbar</li>
-            <li>Lieferzeit: 2-4 Wochen</li>
-          </ul>
-        </div>
-        <img src="img/shoppingbag.png" alt="Dekorative Markierungen">
-      </div>
-      <div class="branding-item">
-        <div class="text">
-          <h3>26.  Stickers</h3>
-          <strong>Technische Details</strong>
-          <ul>
-            <li>Kundenspezifische Abmessungen verfügbar</li>
-            <li>Kundenspezifisches Branding verfügbar</li>
-            <li>Lieferzeit: 2-4 Wochen</li>
-          </ul>
-        </div>
-        <img src="img/mail - Copy.png" alt="Dekorative Markierungen">
+        <img src="img/123-removebg-preview - Copy.png" alt="Dekorative Markierungen">
       </div>
     </div>
   </div>
