--- a/main.html
+++ b/main.html
@@ -6,13 +6,14 @@
   <title>GSG24</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <div class="container">
     <header class="contact-info">
-      <span class="email"><a href="email">Info@gsg24.ch</a></span>
-      <span class="website"><a href="">www.gsg24.ch</a></span>
-      <span class="phone"><a href="phone">+41 44 865 28 85</a></span>
+      <span class="email"><a href="mailto:Info@gsg24.ch">Info@gsg24.ch</a></span>
+      <span class="website"><a href="https://www.gsg24.ch" target="_blank">www.gsg24.ch</a></span>
+      <span class="phone"><a href="tel:+41448652885">+41 44 865 28 85</a></span>
     </header>
 
     <div class="logo-container">
@@ -23,6 +24,14 @@
       <a href="uberuns.html" class="button">Über uns</a>
       <a href="unserprodukt.html" class="button">Unsere Produkte</a>
     </div>
+
+    <div class="social-media">
+      <a href="https://www.instagram.com/gsg24.ch" target="_blank"><i class="fab fa-instagram"></i></a>
+    </div>
   </div>
+  <footer class="site-footer">
+  <p>Design von <strong>ES</strong> &copy; 2025</p>
+</footer>
+
 </body>
 </html>
