--- a/crew.html
+++ b/crew.html
@@ -11,7 +11,7 @@
 
     <header>
     <div class="container">
-      <a href="main.html"><img src="img/logo2 - Copy.png" alt="GSG24 Logo" class="logo">
+      <a href="index.html"><img src="img/logo2 - Copy.png" alt="GSG24 Logo" class="logo">
 </a>
     </div>
   </header>
