--- a/uberuns.html
+++ b/uberuns.html
@@ -10,7 +10,7 @@
 <body>
      <header>
     <div class="container">
-      <a href="main.html"><img src="img/logo2 - Copy.png" alt="GSG24 Logo" class="logo"></a>
+      <a href="index.html"><img src="img/logo2 - Copy.png" alt="GSG24 Logo" class="logo"></a>
       <h1>Über uns</h1>
     </div>
   </header>
