--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
   </div>
   <footer class="site-footer">
-  <p>Design von <strong>ES</strong> &copy; 2025</p>
+  <p><strong>GSG24</strong> &copy; 2025</p>
 </footer>
 
 </body>
