--- a/index.html
+++ b/index.html
@@ -33,5 +33,11 @@
   <p><strong>GSG24</strong> &copy; 2025</p>
 </footer>
 
+<div id="cookie-banner" class="cookie-banner">
+  <p>Wir verwenden Cookies, um das Erlebnis auf dieser Site zu verbessern. <a href="/privacy-policy.html">Erfahren Sie mehr</a>.</p>
+  <button onclick="acceptCookies()">Prano</button>
+</div>
+
+<script src="script.js"></script>
 </body>
 </html>
